Fix benchmarks for serialization for different JDKs
* ByteBuffer.rewind in JDK8 returns Buffer, and in JDK11 returns ByteBuffer.
* Pass `--add-opens java.base/java.util=ALL-UNNAMED` and other to JMH benchmark.