@@ -4,7 +4,7 @@ A source code for the article "Scala Serialization" at [medium](https://medium.c
 
 Recent charts for the article is at https://dkomanov.github.io/charts/scala-serialization/.
 
-## TODO
-
-* Fix circe.
-* Automate performance benchmark.
+Run:
+```
+JDK17_ARGS_APPEND="--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED" scripts/run-jmh.sh //src/com/komanov/serialization/jmh:jmh scala-serialization-2022
+```
